modified the modal's border thickness and fixed close icon size on mobile

--- a/src/components/modal/modal.css
+++ b/src/components/modal/modal.css
@@ -18,13 +18,18 @@
   margin: 0 auto;
   padding: 1% 1% 3% 1%;
   width: 90%;
-  background: white;
+  background-color: white;
+  border: 3px solid #a7b8c3;
+}
+
+.modal-header-button {
+  display: none;
 }
 
 .modal-content .modal-close-icon {
   border: 2px solid #495d6a;
-  margin: 5% 0 0 0;
-  width: 7.5%;
+  margin: 20% 0 0 0;
+  width: 65%;
 }
 
 .modal-close-icon:hover {
@@ -147,9 +152,8 @@
   }
 
   .modal-content .modal-close-icon {
-    border: 2px solid #495d6a;
-    margin: 2.5% 0 0 0;
-    width: 5.5%;
+    margin: 50% 0 0 0;
+    width: 70%;
   }
 }
 
@@ -160,9 +164,8 @@
   }
 
   .modal-content .modal-close-icon {
-    border: 2px solid #495d6a;
-    margin: 5% 0 0 0;
-    width: 4%;
+    margin: 50% 0 0 0;
+    width: 70%;
   }
   .modal-content-main-body {
     margin: 2.5% 0 0 0;
@@ -177,9 +180,8 @@
   }
 
   .modal-content .modal-close-icon {
-    border: 2px solid #495d6a;
-    margin: 2.5% 0 0 0;
-    width: 3.5%;
+    margin: 50% 0 0 0;
+    width: 80%;
   }
 }
 
